--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,8 +31,8 @@ NODE_ENV=development
 # SMTP_FROM=tu_email@gmail.com
 
 # Para BanaHosting/cPanel, usa el servidor SMTP local:
-# SMTP_HOST=localhost
-# SMTP_PORT=25
-# SMTP_USER=tu_usuario_cpanel@mbsolutionscr.com
-# SMTP_PASS=tu_contraseña
-# SMTP_FROM=no-reply@mbsolutionscr.com
+SMTP_HOST=localhost
+SMTP_PORT=25
+SMTP_USER=ordenes-web@mbsolutionscr.com
+SMTP_PASS=contraseña_de_ordenes_web
+SMTP_FROM=ordenes-web@mbsolutionscr.com
