--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.0",
     "bcryptjs": "^2.4.3",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "sharp": "^0.33.0"
   }
 }
